kubernetes/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fpj-frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fpjfe
  template:
    metadata:
      labels:
        app: fpjfe
    spec:
      containers:
      - name: fpjfe
        image: djtoler/frontkube1:latest
        ports:
        - containerPort: 3000
