kubernetes/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpjfrontend-service-nodeport
spec:
  type: NodePort
  selector:
    app: fpjfe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
